# Search-Engine

./: .gitignore  AVL_TREE.h  CMakeLists.txt  DocParser.h  README.md  Tests.cpp  documentation.md  index.h  indexHandler.h  key.h  main.cpp  myDocument.h  query.h  rapidJSONExample.cpp  test.cpp  userInterface.h
rapidjson/: document.h  reader.h
rapidjson/error/: error.h
